Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43288

"Pick screen Color" in QColorDialog doesn't work on the color gradient

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.1
    • 5.4.0
    • None
    • all
    • 37fa842f41311e71d4c94eaa380ebfa0965fa25d

    Description

      • open a QColorDialog
      • click on the "Pick Screen Color"
      • move the mouse on the rectangle with the color gradient

      One time out of two, you pick black, because you have the cursor showing the actual color.

      It's a mis-used of the color dialog, but it can be easily prevented by hiding the black cursor when the mouse is on the color rectangle.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            iamsergio Sergio Martins
            narnaud Nicolas Arnaud-Cormos
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes