QColorDialog: Fix picking screen colors inside QColorPicker

If you click "Pick screen color" and move mouse over QColorPicker (the square with gradients)
unexpected things will happen: black will be picked half the times.

This is because QColorPicker's black cross is painted under our mouse cursor.

Although "pick screen color"'s use case is to pick colors in other windows, there's no reason
to not make it work on QColorDialog itself too.

Task-number: QTBUG-43288
Change-Id: I03ca02148cc15ad41d545723d4ac4f5a82842b4b
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>

cregit: 37fa842f41311e71d4c94eaa380ebfa0965fa25d https://github.com/qt/qtbase/commit/37fa842f41311e71d4c94eaa380ebfa0965fa25d